Preserve canonical factorization work-ledger order