@@ -1,6 +1,7 @@
 package de.regelsuche.polynomial;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.Comparator;
 import java.util.LinkedHashMap;
 import java.util.List;
@@ -141,7 +142,8 @@ public interface FactorizationEngine<C> {
                 }
                 canonical.merge(stage, units, Math::addExact);
             });
-            stages = Map.copyOf(canonical);
+            stages = Collections.unmodifiableMap(
+                new LinkedHashMap<>(canonical));
         }
 
         public long totalWorkUnits() {
